Changes to Data Matrix legend to prevent overlap with table.

--- a/docroot/sites/all/themes/new_ocg/sass/components/_misc.scss
+++ b/docroot/sites/all/themes/new_ocg/sass/components/_misc.scss
@@ -3651,6 +3651,11 @@ span.newtab {
   margin-bottom: 0;
 }
 
+.page-programs-cgci-data-matrix #postscript-first {
+  float: left;
+  padding-left: 10px;
+}
+
 .view-cgci-data-matrix table {
     font-family: "FranklinGothicFSMedCdRegular","Arial Narrow",Arial,sans-serif !important;
 }
